@@ -106,8 +106,6 @@ Add the JS include tag to your layout (relies on Prototype so include the defaul
   * Datetime Field
     * I would like to be able to use a nice JS date/time picker but I would need a way to support both Prototype and JQuery
 
-* Update the way the routes are generated
-
 * Be able to set the following field options
   * Select: Size (for multiselect)
   * Check Box: Checked? (whether to check the box by default)
