@@ -1,9 +1,14 @@
+require File.expand_path(File.dirname(__FILE__) + "/lib/insert_commands.rb")
+
 class DynamicFormsGenerator < Rails::Generator::Base
   
   def manifest
     record do |m|
       m.directory "config/initializers"
       m.template "initializers/dynamic_forms.rb", "config/initializers/dynamic_forms.rb"
+      
+      m.insert_into "config/routes.rb", "DynamicForms::Routes.draw(map)"
+      
       m.directory "app/models"
       m.template "models/form.rb", "app/models/form.rb"
       m.template "models/form_field.rb", "app/models/form_field.rb"
